infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: runtime-authority-lab
  namespace: runtime-lab

spec:
  replicas: 1

  selector:
    matchLabels:
      app: runtime-authority-lab

  template:
    metadata:
      labels:
        app: runtime-authority-lab

    spec:

      serviceAccountName: runtime-app

      containers:
      - name: app

        image: saksham8929/runtime-authority-lab:latest

        ports:
        - containerPort: 8000

        securityContext:
         runAsNonRoot: true
         allowPrivilegeEscalation: false
         readOnlyRootFilesystem: true

         capabilities:
           drop:
            - ALL

         seccompProfile:
          type: RuntimeDefault

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
