infra/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: runtime-service
  namespace: runtime-lab

spec:
  selector:
    app: runtime-authority-lab

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000

  type: ClusterIP
